--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "formidable": "^3.5.2",
     "framer-motion": "^12.4.2",
     "fs-extra": "^11.3.0",
+    "geist": "^1.3.1",
     "lucide-react": "^0.429.0",
     "next": "^14.2.24",
     "python-shell": "^5.0.0",
