--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "concept_zero",
+  "name": "conceptzero",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,34 +18,24 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack/react-query": "^5.66.7",
-    "@tsparticles/engine": "^3.8.1",
-    "@types/formidable": "^3.4.5",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "formidable": "^3.5.2",
     "framer-motion": "^12.4.2",
-    "fs-extra": "^11.3.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.429.0",
     "next": "^14.2.24",
-    "python-shell": "^5.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-markdown": "^9.0.3",
-    "react-router-dom": "^7.1.5",
-    "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tsparticles": "^3.8.1",
-    "xlsx": "^0.18.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
